# test_data4all

./: .env  README.md  app.docker-compose.yml  pyproject.toml
airflow_core/: .env.airflow  Dockerfile  docker-compose.yaml  requirements.txt
airflow_core/connectors/: minio.py  rabbitmq.py
airflow_core/dags/: biological_data_dag.py  gbif_dag.py  inaturalist_dag.py  prf_dag.py
airflow_core/model/: connector.py  producer.py
app/: consume.py  run_local_pipeline.py  transform_local.py
app/connectors/: local_minio_connector.py  minio.py  postgres.py  rabbitmq.py
app/core/: config.py  logger.py
app/models/: data_lake_connector.py  queue_connector.py  transformation_pipeline.py
app/schemas/: data.py  response.py
app/static/: -.csv  dados_brutos.csv  taxonomy_file.csv
app/utils/: date.py  taxonomy.py
composes/app/: Dockerfile  app.docker-compose.yml
composes/services/: db.docker-compose.yml  minio.docker-compose.yml  rabbitmq.docker-compose.yml
scripts/: insertion_script.py
transformation_docs/: HERE_Data4All.ipynb  Pad_Spps.ipynb  Pad_csv.ipynb  Pad_date_crs.ipynb
