[tool.poetry]
name = "environbit"
version = "0.1.0"
description = ""
authors = ["pedro.grilo <pedro.sgrilo@decsis.pt>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
pandas = "^2.2.3"
apache-airflow = "^2.10.2"
apache-airflow-providers-postgres = "^5.13.0"
pydantic = "^2.9.2"
beautifulsoup4 = "^4.12.3"
selenium = "^4.25.0"
webdriver-manager = "^4.0.2"
minio = "^7.2.10"
logging = "^0.4.9.6"
pika = "^1.3.2"
psycopg = {extras = ["binary"], version = "^3.2.3"}
pydantic-settings = "^2.6.1"
safety = "^3.2.11"
pip = "^24.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
